zombiemancer.css
/* ... */
@media screen and (min-width: 1700px) {
  html,body {
    font-size: 18px;
  }
}

@media screen and (max-width: 900px) {
  html,body {
    font-size: 14px;
  }
  div.stats.zoom {
    bottom:10px;
    right:10px;
    transform: none;
    left: auto;
  }
}

@media screen and (max-width: 1800px) {
  div.shop div.tabs button {
    margin-right: 0;
  }
  div.start-game button, div.end-level button, div.shop button {
    padding: 6px 6px;
  }
  div.level-select {
    width:60%;
  }
}
@media screen and (max-width: 1509px) {
  div.buttons.open {
    right: 325px;
  }
  div.level-select {
    width:70%;
  }
}

@media screen and (max-width: 1040px) {
  div.start-game, div.end-level {
    width: 90%;
  }
  div.level-select {
    width:80%;
  }
  .inventory .item {
    width:3.5em !important;
    height:3.5em !important;
  }
}
@media screen and (max-width: 579px) {
  div.shop {
    width:80%;
  }
  div.buttons {
    top:auto;
    bottom: 40px;
  }
  div.buttons.open {
    right:0;
  }
  div.buttons button {
    padding: 5px 10px;
  }
  div.start-game button, div.end-level button, div.shop button {
    padding:10px;
  }
}

div.message {
  background-color: rgba(0,0,0,0.4);
  position: absolute;
  top:10px;
  left: 50%;
  transform: translateX(-50%);
  font-size: 1.5em;
  padding:0 0.5rem;
  z-index: 150;
}

div.message > p {
  position: relative;
  text-shadow: 2px 2px #000;
  margin: 0.5rem;
}

div.message > p::after {
  content:"";
  height:2px;
  background-color: #fff;
  position: absolute;
  animation:width-animation 4s linear;
  bottom:0;
  left:50%;
  transform: translateX(-50%);
}

@keyframes width-animation {
  0% {width:100%;}
  100% {width:0%;}
}

#prestige-bg {
  position: absolute;
  width: 100%;
  height: 100%;
  left:0;
  top:0;
}

.levelup {
  background: linear-gradient(270deg, rgba(0,0,0,0) 25%, #ffee10 50%, rgba(0,0,0,0) 75%);
  background-size: 400% 400%;

  -webkit-animation: levelup-animation 2s ease;
  -moz-animation: levelup-animation 2s ease;
  animation: levelup-animation 2s ease;
}

@keyframes levelup-animation {
  0%{background-position:0% 50%}
  50%{background-position:100% 50%}
  100%{background-position:0% 50%}
}

::-webkit-scrollbar {
  width: 5px;
}

::-webkit-scrollbar-track {
  background: #000;
}

::-webkit-scrollbar-thumb {
  background: #555;
}

::-webkit-scrollbar-thumb:hover {
  background: #ccc;
}

div.upgrade .row {
  clear: both;
  display: table;
  width:100%;
  margin:5px 0;
}
div.upgrade .col {
  float:left;
  width: 65%;
}
div.upgrade .col button {
  width:100%;
}
div.upgrade .col:nth-of-type(2) {
  width: 35%;
}

div.level-stats {
  position: absolute;
  bottom: 45px;
  left: 50%;
  transform: translateX(-50%);
  background-color: rgba(0,0,0,0.5);
  text-align: left;
  text-shadow: 2px 2px #000;
  padding:5px 10px;
}

div.level-stats td {
  padding-right: 10px;
}

div.resources {
  position: absolute;
  left: 10px;
  top: 10px;
  background-color: rgba(0,0,0,0.5);
}

div.resources label {
  position: relative;
  display:block;
  font-size:1.2em;
  margin:10px;
  text-shadow: 2px 2px #000;
}

div.resources label > span.value {
  float:right;
  margin-left: 0.5em;
}

div.spells > div.skeleton {
  position: absolute;
  height:5em;
  width: 100%;
  left:0;
  top:100%;
  cursor: pointer;
  background: rgba(0,0,0,0.5);
  background-image: url("images/skeleton.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center 5px;
  image-rendering: -moz-crisp-edges;
  image-rendering: -webkit-crisp-edges;
  image-rendering: pixelated;
  image-rendering: crisp-edges;
}

div.skeleton > .bg {
  position: absolute;
  width: 100%;
  height: 100%;
}
div.skeleton:hover {
  color: #ff3;
  box-shadow: 0 0 5px #ffee10;
  text-shadow: 0 0 5px #ffee10;
}

div.skeleton > div.xp {
  position: absolute;
  right: 0;
  background-color: #000;
  height:100%;
  width: 5px;
}
div.skeleton > div.xp > span {
  background-color: #fb2;
  position: absolute;
  bottom: 0;
  left: 1px;
  width: 3px;
}

div.skeleton > div.lvl {
  width: calc(100% - 5px);
  text-align: center;
  bottom: 0;
  position: absolute;
  background: rgba(0,0,0,0.8);
}

div.skeleton > div.lvl.dead {
  color:#fd5252;
}

#new-gear-set {
  min-width: 30%;
}

.inventory {
  margin: 0.5em 0;
  height:400px;
  overflow: visible;
}
.inventory .gear-sets, .inventory .equipped, .inventory .items {
  float:left;
  max-height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}

.inventory .gear-sets {
  width: 20%;
}
.inventory .equipped {
  width: 40%;
}
.inventory .items {
  width:40%;
}

.inventory .item {
  width:4em;
  height:4em;
  border:1px solid white;
  margin: 0.5em;
  position: relative;
  display: inline-block;
}

.inventory .item .icon {
  position: absolute;
  height:100%;
  width: 100%;
  top:0;
  left:0;
  image-rendering: -moz-crisp-edges;
  image-rendering: -webkit-crisp-edges;
  image-rendering: pixelated;
  image-rendering: crisp-edges;
}

.inventory .gear-sets ul {
   list-style-type: none;
}

.inventory .gear-sets .gear-sets-list {
  max-height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}

.inventory .gear-sets .gear-sets-list  button {
  width: 95%;
  margin-top: 5px;
}

.inventory .items .item, .inventory .equipped .item.trash {
  cursor: pointer;
}

.inventory .equipped .item.item.sword {
  clear: both;
}

.inventory .item.empty {
  background-color: #555;
}
.inventory .item.common {
  background-color: mediumseagreen;
}
.inventory .item.rare {
  background-color: dodgerblue;
}
.inventory .item.epic {
  background-color:#fb2;
}
.inventory .item.legendary {
  background: linear-gradient(270deg, #6b1610, #fc3503, #6b1610);
  background-size: 190% 200%;

  -webkit-animation: levelup-animation 4s linear infinite;
  -moz-animation: levelup-animation 4s linear infinite;
  animation: levelup-animation 4s linear infinite;
}
.inventory .item.ancient {
  background: linear-gradient(#e66465, #9198e5);
  background-size: 190% 200%;
}
/* ... */

